# ntf

./: .gitignore  Cargo.toml  README.md  functions.go  go.mod  go.sum  main.go  ntf-shell-hook.sh  utils.go  utils_test.go
.github/workflows/: build.yml
backends/: backends.go  line.go  pushbullet.go  pushover.go  slack.go  syslog.go
src/: main.rs  ntf-shell-hook.sh
src/backends/: common.rs  line.rs  mod.rs  pushbullet.rs  pushover.rs  slack.rs  syslog.rs
