[package]
name = "ntf"
version = "0.1.9"
authors = ["Takanori Hirano <hrn.takanori@gmail.com>"]
edition = "2018"

[dependencies]
surf = "2.3.2"
config = "0.12.0"
serde = { version = "1.0.136", features = ["derive"] }
thiserror = "1.0.30"
async-trait = "0.1.52"
async-std = "1.10.0"
dirs = "4.0.0"
hostname = "0.3.1"
username = "0.2.0"
clap = "3.1.6"
failure = "0.1.8"
syslog = "6.0.1"

[dev-dependencies]
regex = "1.5.5"

[profile.release]
lto = true
